# DWH

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  HOTFIX_AZURE_SUBSCRIPTION.md  Makefile  README.md  hotfix_azure_subscription.sh  migrate_subscription.sh  package-lock.json  package.json  pyrightconfig.json  setup_azure_env.sh
.agent/workflows/: bmad.md
.bmad-core/: install-manifest.yaml
.github/: CHANGELOG.md
.github/workflows/: release.yml
data-generator/: Dockerfile  README.md  producers.py  producers_marketplace.py  pyproject.toml  supervisord.conf
docs/: brownfield-architecture.md  data_model.md  etl_rules.md  gdpr_compliance.md  monitoring.md  prd.md  tech_stack_review.md  test_plan.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.0.epic.md
scripts/: README.md  backup_restore_report_20251126_141508.txt  base_schema_report_20251127_101024.txt  marketplace_schema_report_20251126_162653.txt  pyproject.toml  seed_historical_data.py  seed_vendors.py  test_backup_restore.py  test_conn.py  trigger_alert.py
scripts/migrations/: 001_add_marketplace_tables.sql  002_implement_scd2_vendor.sql  003_implement_scd2_product.sql  004_fix_missing_index.sql  apply_migration.py
scripts/tests/: test_alert_trigger.py  test_backup_full.py  test_backup_quick.py  test_backup_restore.py  test_base_schema.py  test_marketplace_schema.py  test_marketplace_stream.py  test_monitoring.py  (+4 more)
terraform/: .terraform.lock.hcl  data.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  test.tfplan  variables.tf
(+21 files in other folders)
